# era-sync_vm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
cs_derive/: Cargo.toml
cs_derive/src/: alloc.rs  allocatable.rs  decodable.rs  encodable.rs  eq.rs  fixed_decodable.rs  fixed_encodable.rs  get_witness.rs  lib.rs  new_alloc.rs  new_eq.rs  new_fixed_decodable.rs  new_fixed_encodable.rs  new_get_witness.rs  new_pack.rs  new_select.rs  new_utils.rs  new_witness.rs  ord.rs  orth_select.rs  packable.rs  select.rs  tests.rs  utils.rs  var_decodable.rs  var_encodable.rs  witness.rs  witnessable.rs
src/: lib.rs  testing.rs  utils.rs
src/circuit_structures/: byte.rs  bytes32.rs  mod.rs  path_checks.rs  traits.rs  utils.rs
src/data_structures/: markers.rs  mod.rs
src/data_structures/alg_binary_tree/: dense_tree.rs  mod.rs  rescue_impl.rs  sparse_tree.rs
src/data_structures/state/: mod.rs
src/data_structures/storage/: mod.rs  toy_impl.rs
src/glue/: mod.rs  traits.rs
src/glue/aux_byte_markers/: mod.rs
src/glue/binary_hashes/: mod.rs
src/glue/code_unpacker_sha256/: input.rs  memory_query_updated.rs  mod.rs
src/glue/demux_log_queue/: input.rs  mod.rs
src/glue/ecdsa/: entry_point.rs  mod.rs  recover.rs  signature.rs
src/glue/ecrecover_circuit/: input.rs  mod.rs
src/glue/keccak256_round_function_circuit/: input.rs  mod.rs
src/glue/log_sorter/: input.rs  mod.rs
src/glue/memory_queries_validity/: decommit_into_page.rs  decommit_into_page_entry_point.rs  grand_product.rs  input.rs  memory_validity_entry_point.rs  mod.rs  prove_unique_decommitment_requests.rs  prove_unique_decommitments_entry_point.rs  ram_permutation_inout.rs  unpack_code_into_executable_pages.rs  unpack_input_into_parent_pages.rs  unpack_into_pages.rs
src/glue/merkleize_l1_messages/: input.rs  merkleize.rs  mod.rs  tests.rs  tree_hasher.rs
src/glue/optimizable_queue/: mod.rs  queue_pusher.rs  simple_impl.rs  simulate_hash.rs  witness_queue.rs
src/glue/pubdata_hasher/: input.rs  mod.rs  storage_write_data.rs  variable_length.rs
src/glue/ram_permutation/: mod.rs
src/glue/sha256_round_function_circuit/: input.rs  mod.rs
src/glue/sort_decommittment_requests/: input.rs  mod.rs
src/inputs/: mod.rs
src/precompiles/: aux_tables.rs  keccak256.rs  mod.rs  sha256.rs  utils.rs
src/recursion/: accumulator.rs  aggregation.rs  kate.rs  leaf_aggregation.rs  mod.rs  node_aggregation.rs  partial_accumulator.rs  transcript.rs  utils.rs  zeroable_point.rs
src/scheduler/: block_header.rs  constants.rs  ext.rs  mod.rs
src/scheduler/circuit/: mod.rs  (+2 more)
src/secp256k1/: fq.rs  fr.rs  mod.rs
src/traits/: addressable.rs  cs_allocatable.rs  cs_decodable_ext.rs  cs_empty.rs  cs_encodable.rs  cs_encodable_ext.rs  cs_packable.rs  cs_variable_length.rs  cs_witnessable.rs  mod.rs  shardable.rs
src/vm/: franklin_extension.rs  mod.rs  partitioner.rs  ports.rs  structural_eq.rs
(+108 files in other folders)
