[package]
name = "sync_vm"
version = "1.3.3"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>", "Konstantin Panarin <kp@matterlabs.dev>"]
edition = "2021"

resolver = "2"

[dependencies]
# franklin-crypto = {path = "../franklin-crypto", features = ["plonk", "multicore"]}
franklin-crypto = {git = "https://github.com/matter-labs/franklin-crypto", branch = "dev", features = ["multicore"]}
sha2 = "0.10"
sha3 = "0.10.6"
hex = "*"
once_cell = "*"
derivative = "*"
num-bigint = {version = "0.4", features = ["serde"]}
rand = "0.4"
num-integer = "0.1"
num-traits = "0.2"
itertools = "0.10"
cs_derive = {path = "cs_derive"}
# rescue_poseidon = {path = "../rescue-poseidon"}
rescue_poseidon = {git = "https://github.com/matter-labs/rescue-poseidon.git"}
arrayvec = "0.7"
num-derive = "0.3"
zkevm_opcode_defs = {git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "v1.3.2"}
zk_evm = {git = "https://github.com/matter-labs/era-zk_evm.git", branch = "v1.3.3"}
serde = {version = "1", features = ["derive"]}
smallvec = {version = "*", features = ["const_generics"]}

[profile.dev]
split-debuginfo = "unpacked"

[features]
external_testing = []



